# temporal_consistency_odt

./: .envrc  .gitignore  LICENSE  README.md  conf.yaml  config-3.py  conftest.py  main.py  pyproject.toml  pytest.ini  setup.py
example_template/: __init__.py
temporal_consistency/: __init__.py  augmentations.py  frame_anomaly_detection.py  helper.py  object_detection.py  object_detection_tracking.py  tracked_frame.py  utils.py  vis_utils.py
tests_functional/: conftest.py
tests_scripting/: .envrc  install_deps.sh  reinstall_package.sh
tests_unit/: conftest.py  test_utils.py
